<resources>
    <string name="app_name">Vectrize</string>
    <string name="details">Details</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_help">Help &amp; Feedback</string>
    <string name="action_share">Share</string>
    <string name="action_details">Details</string>
    <string name="action_delete">Delete</string>
    <string name="take_picture">Take Picture</string>

    <string name="other_image">Choose Another Image</string>
    <string name="reset_defaults">Reset to Default Values</string>
    <string name="shape_alpha">Transparency</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="shapes_iteration">Shapes Per Iteration</string>
    <string name="background_color">Background Color</string>
    <string name="working_size">Working Size:</string>
    <string name="until_stopped">Run Until Stopped</string>
    <string name="until_iterations">Number of Iterations</string>
    <string name="until_score">Run Until Score:</string>
    <string name="total_shapes">Total Number of Shapes:</string>
    <string name="cancel">Cancel</string>
    <string name="run">Run</string>
    <string name="use_image">Use Image</string>
    <string name="save">Save</string>
    <string name="continue_edit">Continue Editing</string>
    <string name="modal_save">Save As</string>
    <string name="modal_use_default">Use Default Save</string>
    <string name="edit_num_shapes">Try "50"</string>
    <string name="edit_num_score">Try "0.95"</string>
    <string name="share_to">Share Images To&#8230;</string>
    <string name="shape_types_text">Select Shape Type</string>

    <string name="image_preview_descr">Preview of Image to Vectorize</string>
    <string name="modal_save_hint">File Name</string>

    <string name="default_text">Default Text</string>

    <string name="error_field_required">This Field is Required</string>
    <string name="number_field_required">Pleast Enter an Integer Between 1&#8211;999</string>

    <string-array name="shapes_spinner_array">
        <item>Triangles</item>
        <item>Rectangles</item>
        <item>Ellipses</item>
        <item>Circles</item>
        <item>Rotated Rectangles</item>
        <item>Beziers</item>
        <item>Rotated Ellipses</item>
        <item>Polygons</item>
    </string-array>

    <string-array name="sizes_spinner_array">
        <item>1024 (nicest)</item>
    </string-array>

    <!--ABOUT TEXT-->
    <string name="about">About</string>
    <string name="about_text">Vectrize is a mobile version of the Primitive library,
    which generates SVG images from input photographs or images. These images are
    provided as input to reproduce the target images with geometric primitives.
    Vectrize was built by Jordan Buchman and Rahul Krishnan of Solunaire.</string>
    <string name="licenses">Licenses</string>
    <string-array name="licenses">
        <item>Primitive</item>
        <item>MIT License</item>
        <item>https://github.com/fogleman/primitive/blob/master/LICENSE.md</item>
        <item>FAB Speed Dial</item>
        <item>Apache License 2.0</item>
        <item>https://github.com/yavski/fab-speed-dial/blob/master/LICENSE</item>
        <item>Glide</item>
        <item>Apache License 2.0</item>
        <item>https://github.com/bumptech/glide/blob/master/LICENSE</item>
        <item>PhotoView</item>
        <item>Apache License 2.0</item>
        <item>https://github.com/chrisbanes/PhotoView/blob/master/LICENSE</item>
        <item>Discrete SeekBar</item>
        <item>Apache License 2.0</item>
        <item>https://github.com/AnderWeb/discreteSeekBar/blob/master/LICENSE</item>
        <item>Color Picker</item>
        <item>Apache License 2.0</item>
        <item>https://github.com/QuadFlask/colorpicker</item>
        <item>Sharp</item>
        <item>Apache License 2.0</item>
        <item>https://github.com/Pixplicity/sharp/blob/master/LICENSE</item>
    </string-array>
</resources>
