<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="lol.primitive.primitivemobile.DetailActivity">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="10"
        android:title="@string/action_share"
        app:showAsAction="never"
        android:actionProviderClass="android.widget.ShareActionProvider"/>

    <item
        android:id="@+id/action_details"
        android:orderInCategory="20"
        android:title="@string/action_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="30"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
