<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/modal_save_hint"
        android:id="@+id/save_body"
        android:textColor="#000000"
        android:lines="3" />

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button android:id="@+id/ok"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/modal_save"
            android:layout_weight="1" />

        <Button android:id="@+id/use_default"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/modal_use_default" />

    </LinearLayout>

</LinearLayout>