<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.solunaire.vectrize.OptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/image_preview_options"
            android:layout_width="125dp"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:layout_gravity="start"
            android:contentDescription="@string/image_preview_descr"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--TODO: Implement Properly-->
            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/otherButton"
                android:text="@string/other_image"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/shape_types_text"
                android:textColor="@color/black"
                android:textSize="@dimen/about_title_size"/>

            <Spinner
                android:id="@+id/shapes_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"/>

            <Button
                android:id="@+id/resetButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/reset_defaults"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="85dp"
            android:layout_height="fill_parent"
            android:text="@string/shape_alpha"
            android:textColor="@color/black"/>

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shape_alpha_slider"
            app:dsb_min="0"
            app:dsb_max="255"
            app:dsb_value="128" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="85dp"
            android:layout_height="fill_parent"
            android:text="@string/stroke_width"
            android:textColor="@color/black"/>

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stroke_width_slider"
            app:dsb_min="0"
            app:dsb_max="8"
            app:dsb_value="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/shapes_iteration"
            android:textColor="@color/black"/>

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shapes_iteration_slider"
            app:dsb_min="1"
            app:dsb_max="20"
            app:dsb_value="5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="4dp">

        <CheckBox
            android:id="@+id/backgroundCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_color" />

        <View
            android:id="@+id/colorPickerBtn"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:background="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_iterations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/until_iterations"
            android:textColor="@color/black"/>

        <EditText
            android:layout_marginStart="4dp"
            android:id="@+id/num_shapes_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_num_shapes"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp">

        <TextView
            android:id="@+id/text_shapes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_shapes"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/num_shapes"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="0"
            android:textColor="@color/black"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginTop="6dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentStart="true"
            android:id="@+id/cancelOptionsBtn" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run"
            android:layout_alignParentEnd="true"
            android:id="@+id/runOptionsBtn"/>

    </RelativeLayout>

</LinearLayout>