<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lol.primitive.primitivemobile.AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/about_title_size"
        android:layout_marginTop="@dimen/about_margin"
        android:layout_marginStart="@dimen/about_margin"
        android:layout_marginEnd="@dimen/about_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/about_margin"
        android:layout_marginStart="@dimen/about_margin"
        android:layout_marginEnd="@dimen/about_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/licenses"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/about_title_size"
        android:layout_marginTop="@dimen/about_margin"
        android:layout_marginStart="@dimen/about_margin"
        android:layout_marginEnd="@dimen/about_margin"/>

    <View android:id="@+id/separator"
        android:background="@color/black"
        android:layout_width = "fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/about_margin"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/licenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="4dp"
        android:isScrollContainer="false"/>

</LinearLayout>
